src/e/scm/LineMapper.java: fix deprecation warnings about "new Integer".